--- a/milestone3/index.html
+++ b/milestone3/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic  Resume Builder</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -53,8 +53,8 @@
    <section>
    
                 <label for="STATUS"><strong>STATUS:</strong> </label>
-                <input id="STATUS"   name="version"type="radio" value="Single">Single
-                <input id="STATUS"  name="version" type="radio" value="Married">Married
+                <input id="STATUS"   name="version"type="radio" value="Single">Male
+                <input id="STATUS"  name="version" type="radio" value="Married">Female
             </div>
 
             
@@ -62,7 +62,7 @@
      <h2 >EDUCATION:</h2>
       <textarea id="QUALIFICATION" name="QUALIFICATION" rows="5"  cols="40"></textarea>
 
-      <h2>EXPERIENCES:</h2>
+      <h2 >EXPERIENCES:</h2>
       <textarea id="work-experience" name="workExperience" rows="5"  cols="40"></textarea>
 
       <h2> OTHER Skills:</h2>
