--- a/milestone5/index.html
+++ b/milestone5/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Editabel Resume Builder</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -52,8 +52,8 @@
    <section>
    
                 <label for="STATUS"><strong>STATUS:</strong> </label>
-                <input id="STATUS"   name="version"type="radio" value="Single">Single
-                <input id="STATUS"  name="version" type="radio" value="Married">Married
+                <input id="STATUS"   name="version"type="radio" value="Male">Male
+                <input id="STATUS"  name="version" type="radio" value="Female">Female
             </div>
 
             
